RESOLVED FIXED306195
AX: In ITM, we don't emit a tab character between table cells, causing accessibility/mac/attributed-string-for-table.html to fail
https://bugs.webkit.org/show_bug.cgi?id=306195
Summary AX: In ITM, we don't emit a tab character between table cells, causing access...
Tyler Wilcock
Reported 2026-01-24 17:38:05 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-24 17:38:11 PST
Tyler Wilcock
Comment 2 2026-01-24 17:40:31 PST
EWS
Comment 3 2026-02-20 08:43:42 PST
Committed 307917@main (72b9a380679d): <https://commits.webkit.org/307917@main> Reviewed commits have been landed. Closing PR #57189 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.