AX: In ITM, we don't emit a tab character between table cells, causing accessibility/mac/attributed-string-for-table.html to fail https://bugs.webkit.org/show_bug.cgi?id=306195 rdar://168847199

Reviewed by Joshua Hoffman.

Handle TextEmissionBehavior::Tab in AXTextMarkerRange::toAttributedString, fixing the bug.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* Source/WebCore/accessibility/cocoa/AXTextMarkerCocoa.mm:
(WebCore::AXTextMarkerRange::toAttributedString const):

Canonical link: https://commits.webkit.org/307917@main